# dspy-kuzu-demo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  s1_create_embeddings.py  s2_dspy_workflow.py  s3_merge_datasets.py  s4_create_graph.py  utils.py
data/00_raw_data/nobel_prize_api/: README.md  download.py  preprocess_data.py
data/01_source_and_reference/: nobeltree.json
data/02_entity_resolution/: result.json
data/03_merge_datasets/: result.json
