[project]
name = "dspy-kuzu-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.27",
    "ipykernel>=6.29.5",
    "kuzu>=0.11.0",
    "ollama>=0.5.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
